[package]
name = "ost"
version = "0.1.0"
authors = ["John Dowson <dowson.john.pony@gmail.com>"]
edition = "2021"

[profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = {version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2"
spin = "0.5"
lazy_static = { version = "1.4", features = ["spin_no_std"]}
x86_64 = { version = "0.14", features = ["nightly"] }
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.5"
linked_list_allocator = "0.9"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
num-format = { version = "0.4", default-features = false }

[build-dependencies]
cc = "1.0"
nasm-rs = "0.2"

[package.metadata.bootimage]
run-args = [ "-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33

[[test]]
name = "stack_overflow"
harness = false